--- a/backpack/Cargo.toml
+++ b/backpack/Cargo.toml
@@ -36,21 +36,22 @@ git-url-parse = "^0.4.2"
 lazy_static = "1"
 regex = "1"
 cached-path = "^0.5.3"
-fs_extra = "^1.2.0"
 tempfile = "3"
 dialoguer = "^0.10.1"
 walkdir = "2"
 serde_merge = "^0.1.2"
 dirs = "4"
 tracing = "^0.1.34"
+reqwest = { version = "^0.11.11", features = ["blocking"] }
 tracing-forest = { version = "^0.1.4" }
 tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
 
 [dev-dependencies]
 insta = { version = "1", features = ["backtrace"] }
+fs_extra = "^1.2.0"
 rstest = "^0.14.0"
-reqwest = { version = "^0.11.11", features = ["blocking"] }
 pretty_assertions = "1"
+serial_test = "0.4.0"
 
 [build-dependencies]
 vergen = "7"
