--- a/backpack/Cargo.toml
+++ b/backpack/Cargo.toml
@@ -37,7 +37,7 @@ lazy_static = "1"
 regex = "1"
 cached-path = "^0.5.3"
 tempfile = "3"
-dialoguer = "^0.10.1"
+dialoguer = { version = "^0.10.1", features = ["fuzzy-select"] }
 walkdir = "2"
 serde_merge = "^0.1.2"
 dirs = "4"
