--- a/backpack/Cargo.toml
+++ b/backpack/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "backpack"
-version = "1.0.1"
+version = "1.2.0"
 edition = "2021"
 build = "build.rs"
 
@@ -37,17 +37,19 @@ lazy_static = "1"
 regex = "1"
 cached-path = "^0.5.3"
 tempfile = "3"
-dialoguer = { version = "^0.10.1", features = ["fuzzy-select"] }
 walkdir = "2"
 serde_merge = "^0.1.2"
 dirs = "4"
 tracing = "^0.1.34"
 reqwest = { version = "^0.11.11", features = ["blocking"] }
+requestty = "0.4.0"
+requestty-ui = "0.4.0"
+run_script = "0.9.0"
 tracing-forest = { version = "^0.1.4" }
 tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
 
 [dev-dependencies]
-insta = { version = "1", features = ["backtrace"] }
+insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
 fs_extra = "^1.2.0"
 rstest = "^0.14.0"
 pretty_assertions = "1"
