--- a/backpack/Cargo.toml
+++ b/backpack/Cargo.toml
@@ -38,15 +38,14 @@ regex = "1"
 cached-path = "^0.5.3"
 tempfile = "3"
 walkdir = "2"
-serde_merge = "^0.1.2"
 dirs = "4"
 tracing = "^0.1.34"
 reqwest = { version = "^0.11.11", features = ["blocking"] }
 requestty = "0.4.0"
 requestty-ui = "0.4.0"
-run_script = "0.9.0"
 tracing-forest = { version = "^0.1.4" }
 tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
+interactive-actions = "0.1.0"
 
 [dev-dependencies]
 insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
