--- a/backpack/Cargo.toml
+++ b/backpack/Cargo.toml
@@ -40,6 +40,7 @@ tempfile = "3"
 walkdir = "2"
 dirs = "4"
 tracing = "^0.1.34"
+merge-struct = "0.1.0"
 reqwest = { version = "^0.11.11", features = ["blocking"] }
 requestty = "0.4.0"
 requestty-ui = "0.4.0"
