--- a/backpack/Cargo.toml
+++ b/backpack/Cargo.toml
@@ -27,6 +27,7 @@ serde = "1"
 serde_json = "1"
 serde_derive = "1"
 serde_yaml = "^0.8.24"
+serde_regex = "^1.1.0"
 env_logger = "^0.9.0"
 log = "^0.4.17"
 anyhow = "1"
@@ -46,7 +47,10 @@ requestty = "0.4.0"
 requestty-ui = "0.4.0"
 tracing-forest = { version = "^0.1.4" }
 tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
-interactive-actions = "0.1.0"
+interactive-actions = "1"
+tera = "^1.17.0"
+tera-text-filters = "^1.0.0"
+content_inspector = "0.2.4"
 
 [dev-dependencies]
 insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
@@ -54,6 +58,7 @@ fs_extra = "^1.2.0"
 rstest = "^0.14.0"
 pretty_assertions = "1"
 serial_test = "0.4.0"
+
 
 [build-dependencies]
 vergen = "7"
